--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/dotnetcore,rider,jetbrains,angular,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=dotnetcore,rider,jetbrains,angular,node
 
+db_password.txt
+
 ### Angular ###
 ## Angular ##
 # compiled output
