--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=dotnetcore,rider,jetbrains,angular,node
 
 db_password.txt
+.vscode
 
 ### Angular ###
 ## Angular ##
