fix docker dotnet

--- a/Backend/DaDoIS.Api/appsettings.json
+++ b/Backend/DaDoIS.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=database:1433;Database=DaDoIS;User Id=sa;Password=12345678Sa;"
+    "DefaultConnection": "Server=mssql;Database=DaDoIS;User Id=sa;Password=12345678Sa;TrustServerCertificate=true"
   }
 }
