--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,3 @@
-networks:
-  backend:
-
-volumes:
-  db-data:
-
-secrets:
-  db_password:
-    file: ./db_password.txt
-
 services:
   api:
     container_name: api
@@ -19,9 +9,10 @@ services:
     networks:
       - backend
     depends_on:
-      - database
+      mssql:
+        condition: service_healthy
 
-  database:
+  mssql:
     container_name: mssql
     image: mcr.microsoft.com/mssql/server:latest
     environment:
@@ -35,3 +26,13 @@ services:
       - db-data:/var/opt/mssql
     networks:
       - backend
+
+networks:
+  backend:
+
+volumes:
+  db-data:
+
+secrets:
+  db_password:
+    file: ./db_password.txt
