--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,11 @@ services:
       - db-data:/var/opt/mssql
     networks:
       - backend
+    healthcheck:
+      test: /opt/mssql-tools/bin/sqlcmd -U sa -P $(tr -d '\r' < /run/secrets/db_password) -H localhost -Q "select 1" -b -o /dev/null
+      interval: 5s
+      timeout: 2s
+      retries: 10
 
 networks:
   backend:
