--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -4,11 +4,11 @@ WORKDIR /app
 
 ENV PATH /app/node_modules/.bin:$PATH
 
-COPY package.json /app/package.json
+COPY package*.json /app/
 RUN npm install
 RUN npm install -g @angular/cli@17
 RUN ng analytics off -g
 
 COPY . /app
 
-CMD npm start
+CMD ng serve --host 0.0.0.0 --disable-host-check --poll=100
