--- a/Backend/DaDoIS.Api/appsettings.Development.json
+++ b/Backend/DaDoIS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql;Database=DaDoIS;User Id=sa;Password=12345678Sa;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=mssql;Database=DaDoIS;User Id=sa;Password=12345678Sa;TrustServerCertificate=true"
   }
 }
