--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: ./Backend/
       dockerfile: Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
     ports: 
       - "5002:8080"
     networks:
