--- a/Frontend/.eslintrc.json
+++ b/Frontend/.eslintrc.json
@@ -48,7 +48,8 @@
             "allowExpressions": true
           }
         ],
-        "@typescript-eslint/no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off",
+        "@angular-eslint/component-class-suffix": "off"
       }
     },
     {
